# Griffin

./: .env.example  .gitignore  README.md  V2_AUDIT_REPORT.md  V2_P0_P1_AUDIT_REPORT.md  V2_REMAINING_FEATURES_AUDIT_REPORT.md  app.py  build_dataset.py  clean_dataset.py  create_chromadb.py  evaluate_rag.py  generate_embeddings.py  graph_rag.py  imp.md  main.py  pyproject.toml  requirements.txt  run_pipeline_cli.py  sync_neo4j.py
.agents/: AGENTS.md
backend/agents/: citation.py  experiment.py  hypothesis.py
backend/api/: agents.py  auth.py
backend/autonomous/: planner.py  research_loop.py  scheduler.py
backend/control/: human_review.py
backend/memory/: research_graph.py  user_memory.py
backend/reasoning/: contradiction.py  graphrag.py
backend/scoring/: discovery.py
backend/writer/: scientific_writer.py
dataset/: claims.csv  clean_papers.csv  clean_papers_with_embeddings.csv  consensus_report.md  contradiction_report.md  contradictions.csv  contradictions.json  contradictions.txt  eln_entry.txt  final_papers.csv  final_synthesis.md  openalex.csv  pmc.csv  protocol_draft.txt  rag_performance_report.md  ranked_papers.csv  semantic_scholar.csv
dataset/chroma_db/: chroma.sqlite3
frontend/src/: App.jsx  index.css
griffin_reflex/: requirements.txt  rxconfig.py
griffin_reflex/griffin_reflex/: data_layer.py  griffin_reflex.py
griffin_reflex/reflex.lock/: package.json
scratch/: test_self_healing.py  test_tog.py
src/agents/: __init__.py  bias_agent.py  claim_extractor_agent.py  eln_agent.py  (+20 more)
tests/: test_agents.py  test_collectors.py  test_core.py
(+50 files in other folders)
